--- a/seattle_airbnb_listings_SD.ipynb
+++ b/seattle_airbnb_listings_SD.ipynb
@@ -17,15 +17,13 @@
     "\n",
     "\n",
     "These are the five main  questions for our analysis:\n",
-    "<font color='#FF8C00'>\n",
     "    \n",
     "Q1. What type of properties has the highest prices?<br>\n",
     "Q2. Does \"host_response_time\" impact on the location's number of reviewers?<br>\n",
     "Q3. Which neighbourhoods got the most reviews?<br>\n",
     "Q4. What factors have the most impact on price?<br>\n",
     "Q5. How well can we predict the price and the number of bedrooms?<br>\n",
-    "\n",
-    "</font>"
+    "\n"
    ]
   },
   {
@@ -513,7 +511,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font size=\"4\"> <font color = '#FF8C00'> Q1. What type of properties has the highest prices? </font></font>\n",
+    "## Q1. What type of properties has the highest prices?\n",
     "\n"
    ]
   },
@@ -599,7 +597,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font size=\"4\"> <font color = '#FF8C00'> Q2. Does \"host_response_time\" impact on the location's number of reviewers? </font></font>"
+    "## Q2. Does \"host_response_time\" impact on the location's number of reviewers? "
    ]
   },
   {
@@ -691,7 +689,7 @@
    "source": [
     "\n",
     "\n",
-    "# <font size=\"4\"> <font color = '#FFA500'> Q3. Which neighbourhoods got the most reviews? </font></font>"
+    "##  Q3. Which neighbourhoods got the most reviews?"
    ]
   },
   {
@@ -725,7 +723,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# <font size=\"4\"> <font color = '#FF8C00'> Q4. What factors have the most impact on price? </font></font>"
+    "## Q4. What factors have the most impact on price?"
    ]
   },
   {
@@ -830,7 +828,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# <font size=\"4\"> <font color = '#FF8C00'> Q5. How well can we predict the price and the number of bedrooms? </font></font>"
+    "## Q5. How well can we predict the price and the number of bedrooms?"
    ]
   },
   {
